<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">造场</string>
    <string name="loading">正在连接造场…</string>
    <string name="error_title">无法连接造场</string>
    <string name="error_detail_default">网络连接失败,请检查网络后重试。</string>
    <string name="error_ssl">安全证书校验失败,已停止加载。</string>
    <string name="button_retry">重试</string>
    <string name="upgrade_title">造场已更新</string>
    <string name="upgrade_detail">网站新版本需要更新后的应用才能使用。请安装新版应用,或先在浏览器中继续使用。</string>
    <string name="button_open_browser">在浏览器中打开</string>
    <string name="button_recheck">重新检测</string>
    <string name="download_done">已下载到「下载」文件夹</string>
    <string name="download_failed">下载失败,请稍后重试</string>
    <string name="no_external_app">没有可打开此链接的应用</string>
    <string name="update_banner_text">造场新版 %1$s 可用</string>
    <string name="button_update_now">立即更新</string>
    <string name="button_dismiss">关闭</string>
    <string name="button_download_update">下载新版本</string>
    <string name="update_enable_install_hint">允许「安装未知应用」后,回到应用再点一次立即更新即可安装。</string>
    <string name="update_install_permission_hint">APK 已下载。允许「安装未知应用」后安装会自动继续。</string>
    <string name="update_install_unavailable">这台设备没有可用的安装器,请在浏览器打开站点下载安装。</string>
</resources>
